istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-services
spec:
  type: NodePort
  selector:
    app: nodejs-app
  ports:
    - port: 3000
      name: http
